--- a/principal/templates/principal/base_restricted.html
+++ b/principal/templates/principal/base_restricted.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-Coordenação <span style="font-size:80%"> - {% if request.user.deleg %}{{ request.user.deleg.deleg_school }}{% else %}{{ request.user.colab.colab_school }}{% endif %}</span>
+Coordenação <span style="font-size:80%"> - {{ school.school_name }}</span>
 </a>
 {% endblock %}
 
